src/objects/User__c.object
<CustomObject>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPassword__c</fullName>
        <label>UserPassword</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <label>User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UID-{0000}</displayFormat>
        <label>UserId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>